# ASTP_BF_B-B_DP

./: BnB.cpp  BnB.h  Brute_force.cpp  Brute_force.h  CMakeLists.txt  Data_generator.cpp  Data_generator.h  Dynamic_programming.cpp  Dynamic_programming.h  Graph.cpp  Graph.h  Menu.cpp  Menu.h  README.md  READNE.md  Time_measure.cpp  Time_measure.h  Write_to_csv.cpp  Write_to_csv.h  main.cpp
test_matrices/: data.txt  data10.txt  data11.txt  data12.txt  data13.txt  data5.txt  data6.txt  data7.txt  data8.txt  data9.txt
